--- a/alcs-frontend/package.json
+++ b/alcs-frontend/package.json
@@ -56,6 +56,6 @@
     "eslint": "^8.23.1",
     "jest": "^28.1.3",
     "prettier": "^2.7.1",
-    "typescript": "^4.9.4"
+    "typescript": "4.7.4"
   }
 }
