--- a/services/package.json
+++ b/services/package.json
@@ -113,7 +113,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "4.0.0",
-    "typescript": "^4.9.4",
+    "typescript": "4.7.4",
     "unionfs": "^4.4.0"
   },
   "jest": {
